tests/paczka2/big_fuzzy/91651815.err
Error in line 2: K7JVvWZmE A705 22,3
Error in line 6: S911 S911 32,3
Error in line 30: xKJ5lNJ S435 77,6
Error in line 23: CMx S911 27,7
Error in line 33: CMx S902 42,4
Error in line 38: xKJ5lNJ S902 27,5
Error in line 42: xKJ5lNJ S435 15,0
Error in line 39: 2L865ygq S435 43,1
Error in line 51: JSVfy S435 88,9
Error in line 64: xKJ5lNJ S911 67,8
Error in line 78: VffeyZwR S911 9,5
Error in line 82: JSVfy S902 37,1
Error in line 90: 2L865ygq S435 89,3
Error in line 109: CMx S435 32,16
Error in line 113: S911 S435 96,9
Error in line 111: CMx S435 108,6
Error in line 122: K7JVvWZmE S911 73,8
Error in line 116: JSVfy S435 6,9
Error in line 136: CMx S435 80,5
Error in line 145: CMx S902 65,0
Error in line 134: S911 S435 44,0
Error in line 141: JSVfy A705 4,1
Error in line 152: JSVfy A705 84,7
Error in line 156: K7JVvWZmE S435 48,4
Error in line 153: JSVfy S435 48,6
Error in line 150: 2L865ygq A705 292,4
Error in line 160: xKJ5lNJ A705 89,8
Error in line 176: 2L865ygq S911 68,4
Error in line 186: K7JVvWZmE 3435 55,4
Error in line 190: S911 S911 97,5
Error in line 192: S911 A705 63,6
Error in line 185: 2L865ygq A705 82,3
Error in line 202: S911 S911 87,0
Error in line 204: xKJ5lNJ A705 5,8
Error in line 211: VffeyZwR A705 15,0
Error in line 225: JSVfy S902 28,4
Error in line 231: VffeyZwR S435 76,1
Error in line 228: K7JVvWZmE A705 11,7
Error in line 227: JSVfy A705 88,5
Error in line 238: S911 S911 5,4
Error in line 229: CMx S902 67,9
Error in line 242: S911 S435 78,4
